# embedded-rust-renode

./: Cargo.toml  LICENSE-MIT  README.md  memory.x  renode.resc  stm32-nucleo64.repl
src/: main.rs
