[package]
authors = ["Mark Hakansson <mark.hakansson@live.se>"]
edition = "2021"
readme = "README.md"
name = "embedded-rust-renode"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.3.3"
dwt-systick-monotonic = "1.1.0"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal] 
version = "0.14.0"
features = ["stm32f401", "rt", "rtic"]


# this lets you use `cargo fix`!
[[bin]]
name = "embedded-rust-renode"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
